Remove assessments and use runs throughout the UI
